--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <body onload="teste()">
         <header class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-                <a class="navbar-brand" href="/index.html">Inec Store</a>
+                <a class="navbar-brand" href="index.html">Inec Store</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/publicar.html">Publicar <span class="sr-only">(Página atual)</span></a>
+                      <a class="nav-link" href="publicar.html">Publicar <span class="sr-only">(Página atual)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">Sobre o LabInec</a>
