--- a/publicar.html
+++ b/publicar.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Publicar <span class="sr-only">(Página atual)</span></a>
+                  <a class="nav-link" href="publicar.html">Publicar <span class="sr-only">(Página atual)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sobre o LabInec</a>
