--- a/publicar.html
+++ b/publicar.html
@@ -12,7 +12,7 @@
   <body >
     <header class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-            <a class="navbar-brand" href="index.html">Inec Store</a>
+            <a class="navbar-brand" href="index.html" onclick="renderizar()">Inec Store</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
               <span class="navbar-toggler-icon"></span>
             </button>
