--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </nav>
         </header>
         <hr>
-        <main class="container">
+        <main class="container" >
             <div class="apps">
 
                 <!-- <div class="card text-white bg-primary mb-3" style="height: 10%; width: 90%;">
@@ -95,8 +95,8 @@
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     
-          <script src="/js/firebase.config.js"></script>
-          <script src="/js/storage.js"></script>
+          <script async src="/js/firebase.config.js"></script>
+          <script async src="/js/storage.js"></script>
     
           <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
