--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     
-          <script async src="/js/firebase.config.js"></script>
-          <script async src="/js/storage.js"></script>
+          <script defer src="/js/firebase.config.js"></script>
+          <script defer src="/js/storage.js"></script>
     
           <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
