--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-  <body >
+  <body onload="renderizar()">
         <header class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-dark bg-success">
                 <a class="navbar-brand" href="index.html" onclick="renderizar()">Inec Store</a>
@@ -95,9 +95,9 @@
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
           <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
     
-          <script defer src="/js/firebase.config.js"></script>
-          <script defer src="/js/storage.js"></script>
-    
+          <script async src="./js/firebase.config.js"></script>
+          <script async src="./js/storage.js"></script>
+
           <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
