--- a/publicar.html
+++ b/publicar.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body >
     <header class="container-fluid">
@@ -65,16 +66,16 @@
               </div>    
               <div class="form-group">
                 <label for="exampleFormControlFile1">Escolha a imagem do app</label>
-                <input type="file" class="form-control-file" id="imagem" onchange="escolherImagem(event)" required>
+                <input type="file" class="form-control-file" id="imagem" onchange="carregarImagem(event)" required>
               </div>          
               <div class="form-group">
                   <label for="exampleFormControlFile1">Escolha seu app</label>
-                  <input type="file" class="form-control-file" id="arquivo" /> <!-- onchange="escolherArquivo(event) -->
+                  <input type="file" class="form-control-file" id="arquivo" onchange="carregarArquivo(event)" />
                 </div>
             </form>
 
             <div >
-              <button type="submit" class="btn btn-primary mb-2" onclick="salvarImagem(nomeImagem, imagem)" >Enviar</button>
+              <button type="submit" class="btn btn-primary mb-2" onclick="salvarNoStorage(nomeImagem, imagem, nomeArquivo, arquivo)" >Enviar</button>
             </div>
           </div>         
         </main>
