--- a/publicar.html
+++ b/publicar.html
@@ -9,18 +9,26 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body >
     <header class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-            <a class="navbar-brand" href="index.html" onclick="renderizar()">Inec Store</a>
+      <header class="container-fluid">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+          <a class="navbar-brand" href="index.html" onclick="renderizar()">
+            <img src="./image/logoInec.png" width="50" height="50" class="d-inline-block align-top" alt="">
+            
+          </a>  
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="publicar.html">Publicar <span class="sr-only">(Página atual)</span></a>
+                  <a class="nav-link" href="index.html">Inicio<span class="sr-only">(Página atual)</span></a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="publicar.html">Publicar</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Sobre o LabInec</a>
@@ -79,16 +87,8 @@
             </div>
           </div>         
         </main>
-        <section >
-          <div id="imagem"> 
-            
-          </div>
-          <div id="link">
-
-          </div>
-        </section>
-        <footer class="container-fluid">
-            Desenvolvido por mim
+        <footer class="container-fluid bg-primary mt-5">
+          <p class="m-3">Desenvolvido por Marcelo Morais - <strong>LabInec &copy 2022 </strong></p>
         </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
