--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                       <a class="nav-link" href="publicar.html">Publicar</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Sobre o LabInec</a>
+                      <a class="nav-link" href="sobre.html">Sobre o LabInec</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Professores</a>
+                      <a class="nav-link" href="professores.html">Professores</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Alunos</a>
+                      <a class="nav-link" href="alunos.html">Alunos</a>
                     </li>
                   </ul>
                 </div>
