--- a/alunos.html
+++ b/alunos.html
@@ -25,19 +25,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Inicio<span class="sr-only">(Página atual)</span></a>
+                  <a class="nav-link" href="/index.html">Inicio<span class="sr-only">(Página atual)</span></a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link" href="publicar.html">Publicar</a>
+                  <a class="nav-link" href="/publicar.html">Publicar</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="sobre.html">Sobre o LabInec</a>
+                  <a class="nav-link" href="/sobre.html">Sobre o LabInec</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="professores.html">Professores</a>
+                  <a class="nav-link" href="/professores.html">Professores</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="alunos.html">Alunos</a>
+                  <a class="nav-link" href="/alunos.html">Alunos</a>
                 </li>
               </ul>
             </div>
@@ -80,7 +80,7 @@
           
         
         </main>
-        <footer class="container-fluid bg-primary mt-5">
+        <footer class="container-fluid bg-primary">
           <p class="m-3">Desenvolvido por Marcelo Morais - <strong>LabInec &copy 2022 </strong></p>
         </footer>
     <!-- Optional JavaScript -->
