--- a/sobre.html
+++ b/sobre.html
@@ -45,7 +45,12 @@
     </header>
     <hr>
         <main class="container">
-           <h1 class="mb-5">Labinec</h1>
+          <div class="navbar navbar-expand-sm">
+          <h2 class="mb-5">
+            <h1 class="mr-5">Labinec</h1>
+            <img src="/image/labinec.jpg" width="250" height="250" class="d-inline-block ">
+          </h2> 
+        </div>
            
           
           <p> O LABInec é um espaço colaborativo a serviço da formação de novos talentos e da inclusão digital e social. O objetivo é promover o uso e a apropriação de tecnologias para solução de problemas, estimulando o potencial criativo de crianças e adolescentes.
