--- a/index.html
+++ b/index.html
@@ -51,22 +51,22 @@
             </ol>
             <div class="carousel-inner container-fluid">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/image/imag_slid_1.jpg" alt="Primeiro Slide">
+                <img class="d-block w-100" src="./image/imag_slid_1.jpg" alt="Primeiro Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/image/imag_slid_2.jpg" alt="Segundo Slide">
+                <img class="d-block w-100" src="./image/imag_slid_2.jpg" alt="Segundo Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/image/imag_slid_3.jpg" alt="Terceiro Slide">
+                <img class="d-block w-100" src="./image/imag_slid_3.jpg" alt="Terceiro Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/image/imag_slid_4.jpg" alt="Quarto Slide">
+                <img class="d-block w-100" src="./image/imag_slid_4.jpg" alt="Quarto Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/image/imag_slid_6.jpg" alt="Sexto Slide">
+                <img class="d-block w-100" src="./image/imag_slid_6.jpg" alt="Sexto Slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/image/imag_slid_7.jpg" alt="Setimo Slide">
+                <img class="d-block w-100" src="./image/imag_slid_7.jpg" alt="Setimo Slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
