--- a/publicar.html
+++ b/publicar.html
@@ -92,7 +92,7 @@
           </section>
 
         </main>
-        <footer class="container-fluid bg-primary mt-5">
+        <footer class="container-fluid bg-primary">
           <p class="m-3">Desenvolvido por Marcelo Morais - <strong>LabInec &copy 2022 </strong></p>
         </footer>
     <!-- Optional JavaScript -->
