--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <section class="container-fluid">
               <h3>Depoimentos</h3>
-              <iframe width="100%" height="100%" src="https://www.youtube.com/embed/LOFe-LTATv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe width="100%" height="500px" src="https://www.youtube.com/embed/LOFe-LTATv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
 
             <hr id="alunos">
